@@ -7,6 +7,7 @@
 - Fix nested with has_one associations
 - Support optgroup in :select and :chosen form_ui
 - Support render_form_field with multiple rows (rows with associated-record class)
+- Support for updating row or table after updating a column with inplace_edit
 
 = 3.2.16 (not released)
 - Fix use of column.css_class in form when is a proc, it wasn't skipped when form was a columns group
